AER-2978 Validation on building radius
This change also means validation on import gets a bit stricter, and OPS characteristics based applications won't allow circular buildings anymore (which they shouldn't anyway).